src/test/ui/issues/issue-13446.stderr
error[E0308]: mismatched types
  --> $DIR/issue-13446.rs:3:26
   |
LL | static VEC: [u32; 256] = vec![];
   |                          ^^^^^^ expected array `[u32; 256]`, found struct `std::vec::Vec`
   |
   = note: expected array `[u32; 256]`
             found struct `std::vec::Vec<_>`
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
